Fix alertbox alignment issue

--- a/css/theme.css
+++ b/css/theme.css
@@ -861,7 +861,7 @@ header:hover #magic-arrow {
 
 .theme-help-box-description {overflow: hidden; }
 
-.theme-help-box-container .fa-info{  border: 1px solid #c5c5c5;  background: #f0f0f0; border-radius: 50%; width: 28px; height: 28px; line-height: 26px; display: block; position: absolute; left: -15px; top: -15px; opacity: 1; filter:alpha(opacity=100); color: #888; text-align: center;}
+.theme-help-box-container .fa-info{  border: 1px solid #c5c5c5;  background: #f0f0f0; border-radius: 50%; width: 24px; height: 24px; line-height: 22px; display: block; position: absolute; left: -5px; top: -5px; opacity: 1; filter:alpha(opacity=100); color: #888; text-align: center;}
 
 
 /* ----------------------- */
@@ -2102,8 +2102,8 @@ box-shadow: 1px 0 0 rgba(255, 255, 255, 0.1); width:150px;
 .qsf_file .form-group{ margin:0;}
 .qsf_file .form-control{ border:none; height:auto; margin-bottom:20px; box-shadow:none;}
 .col-lg-8.theme-content .box{background: #f7f7f7; overflow: hidden;}
-.col-lg-8.theme-content .theme-infobox{margin: 0 0 30px 14px;}
-.alert{position: relative; margin: 20px 0 10px 15px;}
+.col-lg-8.theme-content .theme-infobox{margin: 0 0 30px;}
+.alert{position: relative; margin: 20px 0 10px;}
 .theme-content .box-body > .btn-group{float: right;}
 .table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th { background-color: #f0f0f0;}
 
@@ -2124,10 +2124,10 @@ box-shadow: 1px 0 0 rgba(255, 255, 255, 0.1); width:150px;
 /* AlertBox Close Button Fixes   */
 /* ---------------------------------*/
 
-.alert-success .fa-check-circle, .alert-danger .fa-times-circle, .alert-info .fa-info-circle, .alert-warning .fa-exclamation-triangle { border: 1px solid transparent;  background-color: transparent; border-radius: 50%; width: 28px; height: 28px; line-height: 26px; display: block; position: absolute; left: -15px; top: -15px; text-align: center;}
+.alert-success .fa-check-circle, .alert-danger .fa-times-circle, .alert-info .fa-info-circle, .alert-warning .fa-exclamation-triangle { border: 1px solid transparent;  background-color: transparent; border-radius: 50%; width: 24px; height: 24px; line-height: 22px; display: block; position: absolute; left: -5px; top: -5px; text-align: center;}
 .alert-success .fa-check-circle { background-color: #dff0d8; border-color: #d6e9c6; color: #3c763d;}
 .alert-info .fa-info-circle { background-color: #d9edf7; border-color: #bce8f1; color: #31708f;}
-.alert-warning .fa-exclamation-triangle { background-color: #fcf8e3; border-color: #faebcc; color: #8a6d3b;}
+.alert-warning .fa-exclamation-triangle { background-color: #fcf8e3; border-color: #faebcc; color: #8a6d3b; font-size: 12px; line-height: 20px; padding-left: 1px;}
 .alert-danger .fa-times-circle { background-color: #f2dede; border-color: #ebccd1; color: #a94442;}
 
 
